--- a/FRONTEND/CSS/CSS_1_External.css
+++ b/FRONTEND/CSS/CSS_1_External.css
@@ -1,3 +1,4 @@
+/* Id Selectors */
 #Id1{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color:blue        
@@ -7,7 +8,7 @@
   color:brown
 }
 
-
+/* Class Selectors */
 .Class_1{
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color:rgb(255, 0, 217)
@@ -17,7 +18,7 @@
   color:rgb(0, 238, 255)
 }
 
-
+/* Group Selectors */
 #Id3,.Class_3{
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color:rgb(0, 255, 68)
